# lazybox

./: .gitignore  .taplo.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yaml
src/: main.rs
src/functions/: mod.rs  test.rs  to_utf8.rs
test_assets/: gbk_encoding.txt
